revisi latihan 1 dan header

--- a/header.html
+++ b/header.html
@@ -8,5 +8,5 @@
         <input class="search" type="text" placeholder="Ketikan sesuatu.." required > &nbsp;
         <input class="button" type="button" value="Cari..">
     </form>
-</body>  <!--img/palembang.jpg"-->
+</body>  <!-- hhimg/palembang.jpg"-->
 </html>
