--- a/latihan1.html
+++ b/latihan1.html
@@ -16,6 +16,8 @@
 		<p align="right" id="atas">
 			<a href="#bawah"> &#8681;</a>
 		</p>
+		<p> menambah /edit file jbbv</p>
+
 		  <p align="justify">
 			<a href="https://www.w3schools.com/" target="_blank">
 			<img src="img/pempek.jpg" align="right" width="10%" hspace="15"/>
